[package]
name = "wrrm"
version = "1.2.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Write-rarely-read-many wrapper"
edition = "2024"
license = "MIT"
repository = "https://github.com/tomaka/wrrm"
documentation = "https://docs.rs/wrrm"

[dependencies]
atomicbox = "0.4.0"
